# LuoYingRebuild

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  count_lines.py  pyproject.toml  requirements.txt
deploy/kb/: README.md  compose.directus.yml  directus.env.example
doc/: Command 开发文档.md  Config与Constants.md  Skills 开发文档.md
docs/: 2025分省（区）录取分数及位次 - 挂网 - 最新.xlsx  kb_architecture_report.md  knowledge_base.md  knowledge_base_integration.md  web_frontend_api.md
docs/directus/: knowledge_base_schema.json
docs/site_configs/: sai_whu.json
documents/: backend_engineering_flowchart.md  live2d_webRTC_backend_design.md  前后端组件通信图.md  摘要.md  部署文档.md  配置说明.md  项目当前进度与后续分步路线图.md
knowledge/seeds/: admissions_entities.json  whu_admissions_entities.json
scripts/: bootstrap_ragflow_local_models.py  configure_local_kb_env.py  configure_ragflow_local_env.py  crawl_site_preview.py  crawl_site_to_directus.py  crawl_site_to_kb.py  diagnose_memobase.py  import_whu_admission_data.py  rebuild_kb_index.py  seed_directus_site_config.py  setup_directus_knowledge_schema.py
src/data/: quick_replies.json
src/luoying_bot/: bootstrap.py  bootstrap_realtime.py  bootstrap_web.py  config.py  constants.py  main_cli_stream.py  main_qq.py  main_realtime.py  main_web.py  system_prompt_parts.py
tests/: check_ollama_status.py  realtime_offer_smoke.py  test_command_dispatcher.py  test_event_handler.py  test_realtime_ws_transport.py  test_reminder_service.py  test_smoke.py  test_web_api_regression.py  test_web_video_describe_api.py  web_mvp_regression.sh
(+2231 files in other folders)
