[project]
name = "luoying-bot"
version = "0.1.0"
description = "LuoYing multi-platform agent backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "socksio>=1.0.0,<2",
  "requests>=2.31.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "Pillow>=10.0.0",
  "python-dotenv>=1.0.1",
  "pypdf>=5.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "odfpy>=1.4.1",
  "openai>=2.0.0",
  "memobase>=0.0.27",
  "langchain>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-openai>=1.0.0",
  "langgraph>=0.2.0",
  "arxiv>=2.1.0",
  "tavily-python>=0.5.0",
  "croniter>=6.0.0",
  "chardet>=5.2.0,<6",
  "crawl4ai>=0.8.9",
  "asyncpg>=0.30.0",
]

[project.scripts]
luoying-web = "luoying_bot.main_web:main"
luoying-cli = "luoying_bot.main_cli_stream:main"
luoying-qq = "luoying_bot.main_qq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luoying_bot"]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = ["test_*.py"]
pythonpath = ["src"]
